updating comparison-service 	- added module-info.java 	- java upgrade to version 11 	- pom update